--- a/kubernetes/apps/kube-system/snapshot-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/snapshot-controller/app/helmrelease.yaml
@@ -3,28 +3,29 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cilium
+  name: snapshot-controller
 spec:
   interval: 1h
   chart:
     spec:
-      chart: cilium
-      version: 1.17.1
+      chart: snapshot-controller
+      version: 4.0.1
       sourceRef:
         kind: HelmRepository
-        name: cilium
+        name: piraeus
         namespace: flux-system
   install:
+    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
+    crds: CreateReplace
     remediation:
       strategy: rollback
       retries: 3
-  valuesFrom:
-    - kind: ConfigMap
-      name: cilium-helm-values
   values:
-    operator:
-      tolerations: []
+    controller:
+      replicaCount: 2
+      serviceMonitor:
+        create: true
