--- a/kubernetes/apps/kube-system/reloader/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/reloader/app/helmrelease.yaml
@@ -4,14 +4,10 @@ metadata:
   name: reloader
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: reloader
-      version: 1.3.0
-      sourceRef:
-        kind: HelmRepository
-        name: stakater
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: reloader
+    namespace: kube-system
   install:
     remediation:
       retries: 3
