fix(rx): set value to string

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -21,7 +21,7 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MAIL_FROM: hi@solanyn.dev
         STORAGE_ENDPOINT: minio.default.svc.cluster.local
-        STORAGE_PORT: 9000
+        STORAGE_PORT: "9000"
         STORAGE_BUCKET: reactive-resume
         STORAGE_ACCESS_KEY: "{{ .MINIO_ROOT_USER }}"
         STORAGE_SECRET_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
