fix(rx): add chrome

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -11,8 +11,10 @@ spec:
     name: reactive-resume-secret
     template:
       data:
-        # ACCESS_TOKEN_SECRET: "{{ .REACTIVE_RESUME_ACCESS_TOKEN_SECRET }}"
-        # REFRESH_TOKEN_SECRET: "{{ .REACTIVE_RESUME_REFRESH_TOKEN_SECRET }}"
+        ACCESS_TOKEN_SECRET: "{{ .REACTIVE_RESUME_ACCESS_TOKEN_SECRET }}"
+        REFRESH_TOKEN_SECRET: "{{ .REACTIVE_RESUME_REFRESH_TOKEN_SECRET }}"
+        CHROME_TOKEN: "{{ .REACTIVE_RESUME_CHROME_TOKEN }}"
+        TOKEN: "{{ .REACTIVE_RESUME_CHROME_TOKEN }}"
         DATABASE_URL: "postgresql://{{ .REACTIVE_RESUME_POSTGRES_USER }}:{{ .REACTIVE_RESUME_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/reactive_resume"
         INIT_POSTGRES_DBNAME: reactive_resume
         INIT_POSTGRES_HOST: postgres16-rw.database.svc.cluster.local
