fix(rx): callback url

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -21,7 +21,7 @@ spec:
         INIT_POSTGRES_USER: "{{ .REACTIVE_RESUME_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .REACTIVE_RESUME_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        MAIL_FROM: hi@solanyn.dev
+        MAIL_FROM: andrew@goyangi.cloud
         STORAGE_ENDPOINT: minio.default.svc.cluster.local
         STORAGE_PORT: "9000"
         STORAGE_BUCKET: reactive-resume
@@ -29,7 +29,7 @@ spec:
         STORAGE_SECRET_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         VITE_OPENID_NAME: Pocket ID
         OPENID_AUTHORIZATION_URL: https://id.goyangi.cloud/authorize
-        OPENID_CALLBACK_URL: https://cv.solanyn.dev/api/auth/openid/callback
+        OPENID_CALLBACK_URL: https://cv.goyangi.cloud/api/auth/openid/callback
         OPENID_CLIENT_ID: "{{ .REACTIVE_RESUME_CLIENT_ID }}"
         OPENID_CLIENT_SECRET: "{{ .REACTIVE_RESUME_CLIENT_SECRET }}"
         OPENID_ISSUER: Pocket ID
