fix(rx): add tmp folder

--- a/kubernetes/apps/default/reactive-resume/app/helmrelease.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/helmrelease.yaml
@@ -129,3 +129,7 @@ spec:
                 service:
                   identifier: app
                   port: http
+    persistence:
+      tmp:
+        type: emptyDir
+        sizeLimit: 1Gi
