fix(rx): disable oidc for now
See: https://github.com/AmruthPillai/Reactive-Resume/issues/2153

oidc bug

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -27,15 +27,15 @@ spec:
         STORAGE_BUCKET: reactive-resume
         STORAGE_ACCESS_KEY: "{{ .MINIO_ROOT_USER }}"
         STORAGE_SECRET_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        VITE_OPENID_NAME: Pocket ID
-        OPENID_AUTHORIZATION_URL: https://id.goyangi.cloud/authorize
-        OPENID_CALLBACK_URL: https://cv.goyangi.cloud/api/auth/openid/callback
-        OPENID_CLIENT_ID: "{{ .REACTIVE_RESUME_CLIENT_ID }}"
-        OPENID_CLIENT_SECRET: "{{ .REACTIVE_RESUME_CLIENT_SECRET }}"
-        OPENID_ISSUER: Pocket ID
-        OPENID_SCOPE: openid profile email
-        OPENID_TOKEN_URL: https://id.goyangi.cloud/api/oidc/token
-        OPENID_USER_INFO_URL: https://id.goyangi.cloud/api/oidc/userinfo
+        # VITE_OPENID_NAME: Pocket ID
+        # OPENID_AUTHORIZATION_URL: https://id.goyangi.cloud/authorize
+        # OPENID_CALLBACK_URL: https://cv.goyangi.cloud/api/auth/openid/callback
+        # OPENID_CLIENT_ID: "{{ .REACTIVE_RESUME_CLIENT_ID }}"
+        # OPENID_CLIENT_SECRET: "{{ .REACTIVE_RESUME_CLIENT_SECRET }}"
+        # OPENID_ISSUER: Pocket ID
+        # OPENID_SCOPE: openid profile email
+        # OPENID_TOKEN_URL: https://id.goyangi.cloud/api/oidc/token
+        # OPENID_USER_INFO_URL: https://id.goyangi.cloud/api/oidc/userinfo
   dataFrom:
     - extract:
         key: cloudnative-pg
