--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -13,8 +13,7 @@ spec:
       data:
         ACCESS_TOKEN_SECRET: "{{ .REACTIVE_RESUME_ACCESS_TOKEN_SECRET }}"
         REFRESH_TOKEN_SECRET: "{{ .REACTIVE_RESUME_REFRESH_TOKEN_SECRET }}"
-        CHROME_TOKEN: "{{ .REACTIVE_RESUME_CHROME_TOKEN }}"
-        TOKEN: "{{ .REACTIVE_RESUME_CHROME_TOKEN }}"
+        CHROME_TOKEN: "{{ .CHROMIUM_TOKEN }}"
         DATABASE_URL: "postgresql://{{ .REACTIVE_RESUME_POSTGRES_USER }}:{{ .REACTIVE_RESUME_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/reactive_resume"
         INIT_POSTGRES_DBNAME: reactive_resume
         INIT_POSTGRES_HOST: postgres16-rw.database.svc.cluster.local
@@ -34,3 +33,5 @@ spec:
         key: minio
     - extract:
         key: reactive-resume
+    - extract:
+        key: chromium
