--- a/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
@@ -1,13 +1,17 @@
+---
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ./helmrepository.yaml
+  - ./ingress.yaml
   - ./prometheusrule.yaml
-  - ./github-webhook
+  - ./receiver.yaml
 configMapGenerator:
-  - name: flux-instance-helm-values
+  - name: flux-instance-values
     files:
-      - values.yaml=./helm-values.yaml
+      - values.yaml=./helm/values.yaml
 configurations:
-  - kustomizeconfig.yaml
+  - ./helm/kustomizeconfig.yaml
