--- a/kubernetes/apps/observability/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/blackbox-exporter/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -5,14 +6,10 @@ metadata:
   name: blackbox-exporter
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: prometheus-blackbox-exporter
-      version: 9.3.0
-      sourceRef:
-        kind: HelmRepository
-        name: prometheus-community
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: blackbox-exporter
+    namespace: observability
   install:
     remediation:
       retries: 3
