--- a/kubernetes/apps/observability/smartctl-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/smartctl-exporter/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -5,14 +6,10 @@ metadata:
   name: &app smartctl-exporter
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: prometheus-smartctl-exporter
-      version: 0.13.0
-      sourceRef:
-        kind: HelmRepository
-        name: prometheus-community
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: smartctl-exporter
+    namespace: observability
   install:
     remediation:
       retries: 3
@@ -23,10 +20,6 @@ spec:
       retries: 3
   values:
     fullnameOverride: *app
-    config:
-      devices:
-        - /dev/sda
-        - /dev/nvme0n1
     serviceMonitor:
       enabled: true
     prometheusRules:
