--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -3,14 +3,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app flux-operator
+  name: &app flux-instance
   namespace: flux-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword
+      namespace: external-secrets
   interval: 1h
-  path: ./kubernetes/apps/flux-system/flux-operator/app
+  path: ./kubernetes/apps/flux-system/flux-instance/app
   prune: true
   retryInterval: 2m
   sourceRef:
