--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
               tag: 5.0.4@sha256:35bc3c4fb130327eee71182cef20e9b63228500b0dfa52489a472d169f456f88
             env:
               TZ: Australia/Sydney
-              QBT_WEBUI_PORT: &port 8080
+              QBT_WEBUI_PORT: &port 80
               QBT_TORRENTING_PORT: &torrentPort 50413
               CROSS_SEED_ENABLED: true
               CROSS_SEED_HOST: cross-seed.default.svc.cluster.local
@@ -40,10 +40,18 @@ spec:
               - secretRef:
                   name: qbittorrent-secret
             probes:
-              liveness:
+              liveness: &probes
                 enabled: true
-              readiness:
-                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/v2/app/version
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
               startup:
                 enabled: true
                 spec:
@@ -90,6 +98,7 @@ spec:
           lbipam.cilium.io/ips: 192.168.1.122
         ports:
           http:
+            primary: true
             port: *port
           bittorrent:
             enabled: true
@@ -108,9 +117,6 @@ spec:
     persistence:
       config:
         existingClaim: qbittorrent
-      tmp:
-        type: emptyDir
-        sizeLimit: 1Gi
       scripts:
         type: configMap
         name: qbittorrent-scripts
@@ -124,3 +130,6 @@ spec:
         globalMounts:
           - path: /media/downloads/torrents
             subPath: downloads/torrents
+      tmp:
+        type: emptyDir
+        sizeLimit: 1Gi
