chore: add more primary true to app-template charts

--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -67,6 +67,7 @@ spec:
           lbipam.cilium.io/ips: 192.168.1.124
         ports:
           http:
+            primary: true
             port: *port
           rtsp:
             port: 554
