--- a/kubernetes/apps/default/slskd/app/helmrelease.yaml
+++ b/kubernetes/apps/default/slskd/app/helmrelease.yaml
@@ -77,6 +77,7 @@ spec:
           lbipam.cilium.io/ips: 192.168.1.127
         ports:
           http:
+            primary: true
             port: *port
           soulseek:
             enabled: true
