--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -27,7 +27,7 @@ spec:
             matchMode: "safe",
             outputDir: "/config",
             port: 80,
-            qbittorrentUrl: "http://qbittorrent.default.svc.cluster.local:8080",
+            qbittorrentUrl: "http://qbittorrent.default.svc.cluster.local",
             radarr: ["http://radarr.default.svc.cluster.local/?apikey={{ .RADARR_API_KEY }}"],
             skipRecheck: true,
             sonarr: ["http://sonarr.default.svc.cluster.local/?apikey={{ .SONARR_API_KEY }}"],
