--- a/kubernetes/apps/default/chromium/app/helmrelease.yaml
+++ b/kubernetes/apps/default/chromium/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &port chromium
+  name: &app chromium
 spec:
   interval: 1h
   chartRef:
