--- a/kubernetes/apps/default/chromium/app/helmrelease.yaml
+++ b/kubernetes/apps/default/chromium/app/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
       retries: 3
   values:
     controllers:
-      reactive-resume:
+      chromium:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
