--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -19,7 +19,7 @@ cluster:
   name: main
 cni:
   exclusive: false
-devices: enp+
+devices: eno+
 enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
