--- a/kubernetes/apps/kube-system/cilium/app/networks.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networks.yaml
@@ -16,7 +16,7 @@ metadata:
   name: l2-policy
 spec:
   loadBalancerIPs: true
-  interfaces: ["^enp.*"]
+  interfaces: ["^eno.*"]
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
