--- a/kubernetes/apps/default/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/default/minio/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               repository: quay.io/minio/minio
               tag: RELEASE.2024-09-22T00-33-43Z@sha256:7d80fd232a2f7108aa6f133fcfe5fade3f1626d92d31ae1318076e7aa61928a2
             env:
-              MINIO_API_CORS_ALLOW_ORIGIN: https://minio.goyangi.cloud,https://s3.${SECRET_HOME_DOMAIN}
+              MINIO_API_CORS_ALLOW_ORIGIN: https://minio.goyangi.cloud,https://s3.goyangi.cloud
               MINIO_BROWSER_REDIRECT_URL: https://minio.goyangi.cloud
               MINIO_PROMETHEUS_JOB_ID: minio
               MINIO_PROMETHEUS_URL: https://prometheus.goyangi.cloud
