chore(rook-ceph): disable things

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -55,8 +55,8 @@ spec:
           osd_pool_default_size: "1"
           mon_allow_pool_size_one: "true"
           mon_warn_on_pool_no_redundancy: "false"
-        mgr:
-          mgr/crash/warn_recent_interval: "7200" # 2h
+        # mgr:
+        #   mgr/crash/warn_recent_interval: "7200" # 2h
       mon:
         count: 1
       crashCollector:
