--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -50,13 +50,8 @@ spec:
           bdev_async_discard_threads: "1" # quote
           osd_class_update_on_start: "false" # quote
           device_failure_prediction_mode: local # requires mgr module
-          # allow one
-          osd_pool_default_min_size: "1"
-          osd_pool_default_size: "1"
-          mon_allow_pool_size_one: "true"
-          mon_warn_on_pool_no_redundancy: "false"
-        # mgr:
-        #   mgr/crash/warn_recent_interval: "7200" # 2h
+        mgr:
+          mgr/crash/warn_recent_interval: "7200" # 2h
       mon:
         count: 1
       crashCollector:
