fix: configmap names

--- a/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -19,5 +19,5 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: external-secrets-helm-values
+      name: external-secrets-values
 
