--- a/kubernetes/apps/flux-system/flux-instance/app/helmrepository.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helmrepository.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
-  name: flux-operator
+  name: flux-instance
   namespace: flux-system
 spec:
   interval: 1h
@@ -12,6 +12,6 @@ spec:
     operation: copy
   ref:
     tag: 0.17.0
-  url: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+  url: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
   verify:
     provider: cosign
