--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -8,7 +8,7 @@ components:
 resources:
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
-  - ./intel-device-plugin/ks.yaml
+  - ./intel-device-plugin-operator/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
   - ./spegel/ks.yaml
