--- a/kubernetes/apps/database/emqx/ks.yaml
+++ b/kubernetes/apps/database/emqx/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app emqx
-  namespace: &namespace default
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
@@ -18,7 +18,7 @@ spec:
       name: *app
       namespace: *namespace
   interval: 1h
-  path: ./kubernetes/apps/default/emqx/app
+  path: ./kubernetes/apps/database/emqx/app
   prune: true
   retryInterval: 2m
   sourceRef:
@@ -33,21 +33,21 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app emqx-cluster
-  namespace: &namespace default
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: emqx
-      namespace: default
+      namespace: database
   healthCheckExprs:
     - apiVersion: apps.emqx.io/v2beta1
       kind: EMQX
       failed: status.conditions.filter(e, e.type == 'Available').all(e, e.status == 'False')
       current: status.conditions.filter(e, e.type == 'Available').all(e, e.status == 'True')
   interval: 1h
-  path: ./kubernetes/apps/default/emqx/cluster
+  path: ./kubernetes/apps/database/emqx/cluster
   prune: true
   retryInterval: 2m
   sourceRef:
