--- a/kubernetes/apps/external-secrets/external-secrets/app/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/clustersecretstore.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword.external-secrets.svc.cluster.local
+      connectHost: http://nas.internal:7070
       vaults:
         kubernetes: 1
       auth:
