--- a/.mise.toml
+++ b/.mise.toml
@@ -11,7 +11,10 @@ KUBERNETES_DIR = "{{config_root}}/kubernetes"
 SCRIPTS_DIR = "{{config_root}}/scripts"
 TALOS_DIR = "{{config_root}}/talos"
 # Included file paths
-_.file = ["{{config_root}}/kubernetes/apps/system-upgrade/.env"]
+_.file = [
+  "{{config_root}}/onepassword.env",
+  "{{config_root}}/kubernetes/apps/system-upgrade/versions.env"
+]
 # _.python.venv = { path = "{{config_root}}/.venv", create = true }
 
 # [tools]
