--- a/kubernetes/apps/ml-system/seldon-core/ks.yaml
+++ b/kubernetes/apps/ml-system/seldon-core/ks.yaml
@@ -9,6 +9,7 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
     - name: istiod
       namespace: istio-system
   interval: 1h
