--- a/kubernetes/apps/default/your-spotify/ks.yaml
+++ b/kubernetes/apps/default/your-spotify/ks.yaml
@@ -12,6 +12,7 @@ spec:
   components:
     - ../../../../components/gatus/guarded
     - ../../../../components/volsync
+  dependsOn:
     - name: volsync
       namespace: volsync-system
   interval: 1h
