--- a/kubernetes/apps/default/audiobookshelf/ks.yaml
+++ b/kubernetes/apps/default/audiobookshelf/ks.yaml
@@ -11,6 +11,7 @@ spec:
   components:
     - ../../../../components/gatus/guarded
     - ../../../../components/volsync
+  dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: volsync
