--- a/kubernetes/apps/default/pocket-id/ks.yaml
+++ b/kubernetes/apps/default/pocket-id/ks.yaml
@@ -12,6 +12,7 @@ spec:
   components:
     - ../../../../components/gatus/guarded
     - ../../../../components/volsync
+  dependsOn:
     - name: volsync
       namespace: volsync-system
     - name: cloudnative-pg-cluster
