--- a/kubernetes/apps/default/seasonpackarr/ks.yaml
+++ b/kubernetes/apps/default/seasonpackarr/ks.yaml
@@ -11,6 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/volsync
+  dependsOn:
     - name: volsync
       namespace: volsync-system
   interval: 1h
