--- a/kubernetes/apps/ml-system/mlflow/ks.yaml
+++ b/kubernetes/apps/ml-system/mlflow/ks.yaml
@@ -12,6 +12,7 @@ spec:
   components:
     - ../../../../components/gatus/guarded
     - ../../../../components/volsync
+  dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
     - name: rook-ceph-cluster
