--- a/kubernetes/apps/default/thelounge/app/helmrelease.yaml
+++ b/kubernetes/apps/default/thelounge/app/helmrelease.yaml
@@ -5,15 +5,10 @@ metadata:
   name: &app thelounge
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: app-template
-      version: 3.7.2
-      interval: 1h
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: app-template
+    namespace: flux-system
   install:
     remediation:
       retries: 3
