--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: "Label Sync"
+name: Label Sync
 
 on:
   workflow_dispatch:
@@ -14,22 +14,14 @@ permissions:
   issues: write
 
 jobs:
-  label-sync:
-    name: Label Sync
+  main:
+    name: Label Sync - Sync Labels
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: "${{ secrets.BOT_APP_ID }}"
-          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
           sparse-checkout: .github/labels.yaml
-          token: "${{ steps.app-token.outputs.token }}"
 
       - name: Sync Labels
         uses: EndBug/label-sync@v2
