--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: "Labeler"
+name: Labeler
 
 on:
   workflow_dispatch:
@@ -8,8 +8,8 @@ on:
     branches: ["main"]
 
 jobs:
-  labeler:
-    name: Labeler
+  main:
+    name: Labeler - Labeler
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     steps:
@@ -19,11 +19,7 @@ jobs:
         with:
           app-id: "${{ secrets.BOT_APP_ID }}"
           private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: .github/labeler.yaml
-          token: "${{ steps.app-token.outputs.token }}"
+
       - name: Labeler
         uses: actions/labeler@v5
         with:
