--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -20,7 +20,8 @@ spec:
         INIT_POSTGRES_USER: "{{ .REACTIVE_RESUME_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .REACTIVE_RESUME_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        MAIL_FROM: andrew@goyangi.cloud
+        MAIL_FROM: "{{ .SMTP_USERNAME }}"
+        SMTP_URL: "smtp://{{ .SMTP_USERNAME }}:{{ .SMTP_PASSWORD }}@{{ .SMTP_SERVER }}:587"
         STORAGE_ENDPOINT: minio.default.svc.cluster.local
         STORAGE_PORT: "9000"
         STORAGE_BUCKET: reactive-resume
@@ -35,3 +36,5 @@ spec:
         key: reactive-resume
     - extract:
         key: chromium
+    - extract:
+        key: smtp
