chore(rx): disable signup

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -27,6 +27,7 @@ spec:
         STORAGE_BUCKET: reactive-resume
         STORAGE_ACCESS_KEY: "{{ .MINIO_ROOT_USER }}"
         STORAGE_SECRET_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        DISABLE_SIGNUPS: "true"
   dataFrom:
     - extract:
         key: cloudnative-pg
