--- a/kubernetes/apps/default/reactive-resume/app/helmrelease.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               PORT: &port 80
               STORAGE_URL: http://minio.default.svc.cluster.local:9000/reactive-resume
               PUBLIC_URL: https://cv.goyangi.cloud
-              CHROME_URL: wss://chromium.goyangi.cloud
+              CHROME_URL: ws://chromium.default.svc.cluster.local:3000
             envFrom: *envFrom
             probes:
               liveness: &probes
