--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -31,7 +32,7 @@ spec:
               TZ: Australia/Sydney
               QBT_WEBUI_PORT: &port 80
               QBT_TORRENTING_PORT: &torrentPort 50413
-              CROSS_SEED_ENABLED: true
+              CROSS_SEED_ENABLED: false
               CROSS_SEED_HOST: cross-seed.default.svc.cluster.local
               CROSS_SEED_PORT: 80
               CROSS_SEED_SLEEP_INTERVAL: 0
@@ -78,8 +79,9 @@ spec:
             resources:
               requests:
                 cpu: 10m
-              limits:
                 memory: 128Mi
+              limits:
+                memory: 8Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -87,9 +89,6 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [10000]
-        seccompProfile: {type: RuntimeDefault}
-      terminationGracePeriodSeconds: 300
     service:
       app:
         controller: qbittorrent
@@ -108,7 +107,7 @@ spec:
       app:
         className: internal
         hosts:
-          - host: "qb.goyangi.cloud"
+          - host: qb.goyangi.cloud
             paths:
               - path: /
                 service:
