--- a/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
@@ -37,6 +37,9 @@ spec:
       apiConfig: selfHostedServer
       selfHostedServerApiConfig:
         apiUrl: http://prefect-server.ml-system.svc.cluster.local:4200/api
+        basicAuth:
+          enabled: true
+          existingSecret: prefect-secret
       replicaCount: 1
       resources:
         requests:
