--- a/kubernetes/apps/default/echo/app/helmrelease.yaml
+++ b/kubernetes/apps/default/echo/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: echo-server
+  name: echo
 spec:
   interval: 1h
   chartRef:
@@ -19,7 +19,7 @@ spec:
       retries: 3
   values:
     controllers:
-      echo-server:
+      echo:
         strategy: RollingUpdate
         containers:
           app:
@@ -61,13 +61,13 @@ spec:
         seccompProfile: {type: RuntimeDefault}
     service:
       app:
-        controller: echo-server
+        controller: echo
         ports:
           http:
             port: *port
     serviceMonitor:
       app:
-        serviceName: echo-server
+        serviceName: echo
         endpoints:
           - port: http
     ingress:
