--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -5,13 +5,9 @@ metadata:
   name: grafana
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: grafana
-      version: 8.10.1
-      sourceRef:
-        kind: HelmRepository
-        name: grafana
+  chartRef:
+    kind: OCIRepository
+    name: grafana
   install:
     remediation:
       retries: 3
