feat(prefect): add minio credentials to worker env

--- a/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
@@ -53,5 +53,6 @@ spec:
         runAsNonRoot: true
         readOnlyRootFilesystem: true
         allowPrivilegeEscalation: false
+      extraEnvVarsSecrets: ["prefect-secret"]
     role:
       extraPermissions: []
