--- a/kubernetes/apps/ml-system/prefect/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/prefect/app/externalsecret.yaml
@@ -17,6 +17,9 @@ spec:
         INIT_POSTGRES_PASS: "{{ .PREFECT_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         connection-string: "postgresql+asyncpg://{{ .PREFECT_POSTGRES_USER }}:{{ .PREFECT_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/prefect"
+        S3_ENDPOINT_URL: http://minio.default.svc.cluster.local:9000
+        AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
