--- a/kubernetes/apps/default/reactive-resume/app/helmrelease.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
               tag: v4.4.5@sha256:d6e56fa0378801f76a082b5c7a612ed9cece731729afc57e5b48f3b9d6823ff4
             env:
               PORT: &port 80
-              STORAGE_URL: http://minio.default.svc.cluster.local:9000/reactive-resume
+              STORAGE_URL: https://s3.goyangi.cloud/reactive-resume
               PUBLIC_URL: https://cv.goyangi.cloud
               CHROME_URL: ws://chromium.default.svc.cluster.local:3000
             envFrom: *envFrom
