fix: callback url

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -30,7 +30,7 @@ spec:
         DISABLE_SIGNUPS: "true"
         VITE_OPENID_NAME: Pocket ID
         OPENID_AUTHORIZATION_URL: https://id.goyangi.cloud/authorize
-        OPENID_CALLBACK_URL: https://cv.solanyn.dev/api/auth/openid/callback
+        OPENID_CALLBACK_URL: https://cv.goyangi.cloud/api/auth/openid/callback
         OPENID_CLIENT_ID: "{{ .REACTIVE_RESUME_CLIENT_ID }}"
         OPENID_CLIENT_SECRET: "{{ .REACTIVE_RESUME_CLIENT_SECRET }}"
         OPENID_ISSUER: Pocket ID
