--- a/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
@@ -22,6 +22,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    namespaceOverride: ml-system
     worker:
       image:
         repository: prefecthq/prefect
