--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -40,3 +40,20 @@ resources:
   # notebooks
   - https://github.com/kubeflow/manifests.git//apps/jupyter/notebook-controller/upstream/overlays/kubeflow?ref=v1.10.0-rc.2
   - https://github.com/kubeflow/manifests.git//apps/jupyter/jupyter-web-app/upstream/overlays/istio?ref=v1.10.0-rc.2
+
+patchesStrategicMerge:
+  # Set low resource requests
+  - |
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: *
+    spec:
+      template:
+        spec:
+          containers:
+            - name: *
+              resources:
+                requests:
+                  cpu: 10m
+                  memory: 100Mi
