--- a/kubernetes/apps/kubeflow/kubeflow/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kubeflow/app/kustomization.yaml
@@ -41,20 +41,32 @@ resources:
   - https://github.com/kubeflow/manifests.git//apps/jupyter/notebook-controller/upstream/overlays/kubeflow?ref=v1.10.0-rc.2
   - https://github.com/kubeflow/manifests.git//apps/jupyter/jupyter-web-app/upstream/overlays/istio?ref=v1.10.0-rc.2
 
-patchesStrategicMerge:
+patches:
   # Set low resource requests
-  - |
-    apiVersion: apps/v1
-    kind: Deployment
-    metadata:
-      name: *
-    spec:
-      template:
-        spec:
-          containers:
-            - name: *
-              resources:
-                requests:
-                  cpu: 10m
-                  memory: 100Mi
+  - target:
+      kind: Deployment
+    patch: |
+      - op: add
+        path: "/spec/template/spec/containers"
+        value: []
+      - op: replace
+        path: "/spec/template/spec/containers"
+        value:
+          [
+            {
+              "name": "*",
+              "resources": {
+                "requests": {
+                  "cpu": "10m",
+                  "memory": "100Mi"
+                }
+              }
+            }
+          ]
+  - target:
+      kind: Namespace
+    patch: |
+      - op: replace
+        path: "/metadata/name"
+        value: "kubeflow"
 
