--- a/kubernetes/apps/kubeflow/kubeflow/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kubeflow/app/kustomization.yaml
@@ -69,24 +69,17 @@ patches:
     patch: |
       - op: remove
         path: "/"
-  # Deploy in kubeflow namespace
-  - target:
-      kind: Namespace
-    patch: |
-      - op: replace
-        path: "/metadata/name"
-        value: "kubeflow"
   # Remove minio
   - target:
       kind: Deployment
-      name: minio
+      name: "*minio*"
     patch: |
       - op: remove
         path: "/"
   # Remove postgres
   - target:
-      kind: Deployment
-      name: postgres
+      kind: "*"
+      name: "*postgres*"
     patch: |
       - op: remove
         path: "/"
